Adicionamos o CSS no projeto

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="slylesheet" href="css/index.css">
     <title>Aprendendo Git</title>
 </head>
 <body>
     <h1>Olá mundo do Git!</h1>
     <!-- No terminal inicializar o git com git init, automaticamente o campo explorar ficará em verde e passando o mouse em cima aparecerá uma mensagem de não controlado, que significa: que o git foi inicializado mas este arquivo não está trabalhando dentro do git. -->
 <!-- segundo passo git status, No commits yet: não criamos nenhuma versão desse projeto -->
+ <!-- terceiro passo git add index.html-->
+  <!-- quarto passo git status: ele foi adicionado ao git -->
+   <!-- quinto passo utilizar esse comando: git commit -m "inicializamos o projeto" (a primeira vez que utilizar o git, será necessario registrar o e-mail e o nome, pelo terminal mesmo)  -->
+    <!-- registro: git config --global user.email "vitorgomesch@hotmail.com" enter e em seguida: git config --global user.name "Vitor Henriques"-->
+     <!-- sexto passo git log, criamos uma nova versão, e está salva esse controle -->
+      <!-- Ao criar um arquivo CSS, ele ficará em verde, e precisará aicionar ele ao git. Um comando para adicionar tudo é o git add . -->
 </body>
 </html>
