--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Olá mundo do Git!</h1>
+    <script src="js/index.js"></script>
     <!-- No terminal inicializar o git com git init, automaticamente o campo explorar ficará em verde e passando o mouse em cima aparecerá uma mensagem de não controlado, que significa: que o git foi inicializado mas este arquivo não está trabalhando dentro do git. -->
 <!-- segundo passo git status, No commits yet: não criamos nenhuma versão desse projeto -->
  <!-- terceiro passo git add index.html-->
