Adicionamos a função somar

--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
     <!-- registro: git config --global user.email "vitorgomesch@hotmail.com" enter e em seguida: git config --global user.name "Vitor Henriques"-->
      <!-- sexto passo git log, criamos uma nova versão, e está salva esse controle -->
       <!-- Ao criar um arquivo CSS, ele ficará em verde, e precisará aicionar ele ao git. Um comando para adicionar tudo é o git add . -->
+
+      <!-- AULA 2 -->
+       <!-- para ir para as versões anteriores usar o: git checkout e o ID da versão desejada (que vem logo após o commit) assim seu HEAD vai mudar de versão  -->
+        <!-- Realizando o comando git log, é possível visualizar em qual versão está seu HEAD -->
+         <!-- Para voltar o HEAD para o master (ultima versão) usar o comando: git checkout master -->
+
+         <!-- BRANCH -->
+          <!-- Ramificação, posso realizar as modificações nessa branch e depois se eu quiser incorporar na principal é possível. Posso trabalhar em paralelo nessa branch -->
+           <!--Para criar: git checkout -b (Criar uma ramificação do ponto que eu estou)  -->
+           <!-- git branch - vai me mostrar em qual branch eu estou -->
 </body>
 </html>
