Adicionamos a palavra Github

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aprendendo Git</title>
 </head>
 <body>
-    <h1>Olá mundo do Git!</h1>
+    <h1>Olá mundo do Git e do Github!</h1>
     <script src="js/index.js"></script>
     <!-- No terminal inicializar o git com git init, automaticamente o campo explorar ficará em verde e passando o mouse em cima aparecerá uma mensagem de não controlado, que significa: que o git foi inicializado mas este arquivo não está trabalhando dentro do git. -->
 <!-- segundo passo git status, No commits yet: não criamos nenhuma versão desse projeto -->
@@ -26,6 +26,15 @@
          <!-- BRANCH -->
           <!-- Ramificação, posso realizar as modificações nessa branch e depois se eu quiser incorporar na principal é possível. Posso trabalhar em paralelo nessa branch -->
            <!--Para criar: git checkout -b (Criar uma ramificação do ponto que eu estou)  -->
-           <!-- git branch - vai me mostrar em qual branch eu estou -->
+           <!-- git branch - mostra as branch do projeto -->
+
+           <!-- git checkout: usado para alternar entre branches, criar novas branches, ou mudar para uma versão anterior do código em um branch existente. -->
+            <!-- git merge: permite unir o conteúdo de duas ou mais branches em uma única branch. É usado para integrar alterações feitas em uma branch secundária (geralmente uma branch de desenvolvimento) na branch principal (geralmente a branch master) -->
+
+            <!-- AULA 3 -->
+             <!-- Entrar no github, clicar no +, novo repositorio, copiar o comando que o github já te fornece, e colar no terminal: git remote add origin https://github.com/VitorHenriques92/aula-de-git.git (ele se conecta com o repositorio) -->
+              <!-- em seguida copiar o comando git push -u origin master (trocamos o mais pelo master), fazer o login caso seja necessário. Entre na pasta que criou e veja se os arquivos estão lá -->
+
+
 </body>
 </html>
