Mudei o nome do title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="slylesheet" href="css/index.css">
-    <title>Aprendendo Git</title>
+    <title>Aprendendo Git e Github</title>
 </head>
 <body>
     <h1>Olá mundo do Git e do Github!</h1>
@@ -34,6 +34,7 @@
             <!-- AULA 3 -->
              <!-- Entrar no github, clicar no +, novo repositorio, copiar o comando que o github já te fornece, e colar no terminal: git remote add origin https://github.com/VitorHenriques92/aula-de-git.git (ele se conecta com o repositorio) -->
               <!-- em seguida copiar o comando git push -u origin master (trocamos o mais pelo master), fazer o login caso seja necessário. Entre na pasta que criou e veja se os arquivos estão lá -->
+               <!-- Caso faça alguma alteração: git add . , git commit - m "escrever o que foi feito", git push, depois atualizar o github -->
 
 
 </body>
