adicionei o h2 de subtitulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Olá mundo do Git e do Github!</h1>
-    <script src="js/index.js"></script>
+    <h2>RESUMO DA AULA DE GIT E GITHUB</h2>
+    <script src="js/index.js"></script>   
     <!-- No terminal inicializar o git com git init, automaticamente o campo explorar ficará em verde e passando o mouse em cima aparecerá uma mensagem de não controlado, que significa: que o git foi inicializado mas este arquivo não está trabalhando dentro do git. -->
 <!-- segundo passo git status, No commits yet: não criamos nenhuma versão desse projeto -->
  <!-- terceiro passo git add index.html-->
@@ -33,8 +34,17 @@
 
             <!-- AULA 3 -->
              <!-- Entrar no github, clicar no +, novo repositorio, copiar o comando que o github já te fornece, e colar no terminal: git remote add origin https://github.com/VitorHenriques92/aula-de-git.git (ele se conecta com o repositorio) -->
-              <!-- em seguida copiar o comando git push -u origin master (trocamos o mais pelo master), fazer o login caso seja necessário. Entre na pasta que criou e veja se os arquivos estão lá -->
+              <!-- em seguida copiar o comando git push -u origin master (trocamos o main pelo master), fazer o login caso seja necessário. Entre na pasta que criou e veja se os arquivos estão lá -->
                <!-- Caso faça alguma alteração: git add . , git commit - m "escrever o que foi feito", git push, depois atualizar o github -->
+
+               <!-- AULA 4 -->
+                <!-- PEGAR ARQUIVOS DO GITHUB: copiar o nome da pasta que estou usando, abrir o terminal CMD, cd (colar a pasta que foi copiada), entrou na pasta, cd clone (copiar a URL que está no github - botão verde), enter -->
+                 <!-- para entrar na pasta que pegou do github, cd e o nome da pasta, enter. Para abrir: code . (irá abrir o vs code com a pasta) -->
+
+                 <!-- PROJETO EM EQUIPE: Primeiro achar o link da empresa, ou de alguém no github, em seguida clicar em fork (garfo), após o fork é possível clonar esses códigos para mim. Abrir o CMD, entrar na pasta de origem (repos, nesse caso), cd repos, depois git clone (copiar novamente a URL no github - botão verde) -->
+                  <!-- Após baixar o projeto na sua pasta, no CMD, cd (colar o caminho da pasta), code . , irá abrir o projeto. Assim que aberto, criar uma nova branch. -->
+                   <!-- Com o projeto aberto no vs code, abrir o terminal, git checkout -b (e o nome da branch que eu quero dar), git branch (para  verificar se foi criado), a partir dai posso fazer minhas alterações. Após minhas alterações, git add . , git commit -m "Escrever a alteração que foi feita", git push origin (colocar o nome da branch criada)-->
+                    <!-- No gihthub, entrar na sua branch, mandar suas alterações para alguém da equipe esteja responsável, (botão de contribuir) e abrir um create pull request, para validar o que foi feito, nessa parte pode colocar um textinho com as suas alterações. -->
 
 
 </body>
